--- a/files/supervisord.conf
+++ b/files/supervisord.conf
@@ -92,7 +92,7 @@ priority=100
 [program:slurmrestd]
 user=root
 command=/usr/sbin/slurmrestd -vvvvv 0.0.0.0:6820
-environment=SLURMRESTD_SECURITY=disable_user_check,SLURM_JWT=''
+environment=SLURMRESTD_SECURITY="disable_unshare_files,disable_unshare_sysv,disable_user_check",SLURM_JWT=''
 autostart=false
 autorestart=false
 exitcodes=0,1,2
