--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
 #      timeout: 2s
 #      retries: 5
 #    entrypoint: /bin/bash
+    ports:
+      - 6820:6820
     volumes:
       - ./volumes/lib:/var/lib/slurmd
       - ./volumes/spool:/var/spool/slurm
