--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     ports:
       - 6820:6820
     volumes:
+      # mandatory
+      - ./credentials/jwt_hs256.key:/etc/slurm/jwt_hs256.key
+      # optional
       - ./volumes/lib:/var/lib/slurmd
       - ./volumes/spool:/var/spool/slurm
       - ./volumes/log:/var/log/slurm
